# CLAP

./: .gitignore  AlignmentAllocator.h  LICENSE  Memory.h  README.md  Timer.h  Utils.h  xdmaAccess.h  xdmaBackend.h
API/: CMakeLists.txt
API/cmake/modules/: clap-config.cmake  xdma_api-config.cmake
API/include/: CLAP.hpp  Memory.h  Utils.h  xdmaAccess.h  xdmaBackend.h
API/include/IP_Cores/: ApCtrl.h  AxiDMA.h  AxiDMA.hpp  AxiGPIO.hpp  AxiInterruptController.hpp  HLSCore.h  HLSCore.hpp  IPControl.h  RegisterInterface.h  UserInterrupt.h  VDMA.h  VDMA.hpp  WatchDog.h
API/include/IP_Cores/internal/: ApCtrl.h  ApCtrl.hpp  IPControl.h  RegisterInterface.h  UserInterrupt.h  UserInterrupt.hpp  WatchDog.h  WatchDog.hpp
API/include/internal/: AlignmentAllocator.hpp  Backends.hpp  CLAPBackend.hpp  Constants.h  Constants.hpp  Defines.h  Defines.hpp  Exceptions.hpp  Expected.hpp  FileOps.hpp  Logger.h  Logger.hpp  Memory.h  Memory.hpp  RegisterControl.h  RegisterControl.hpp  RegisterInterface.h  RegisterInterface.hpp  SoloRunWarden.hpp  StdStub.hpp  Timer.h  Timer.hpp  Types.hpp  Uio.hpp  UserInterruptBase.hpp  Utils.h  Utils.hpp  xdmaAlignmentAllocator.h  xdmaBackend.h
API/include/internal/backends/: BareMetalBackend.hpp  PCIeBackend.hpp  PetaLinuxBackend.hpp
IP_Cores/: ApCtrl.h  AxiDMA.h  HLSCore.h  IPControl.h  RegisterInterface.h  UserInterrupt.h  VDMA.h  WatchDog.h
doc/project-spec/meta-user/recipes-core/user-udev-rules/: user-udev-rules.bb
doc/project-spec/meta-user/recipes-core/user-udev-rules/files/: 99-uio-device.rules
driver/: load_driver.sh
driver/xdma/: Makefile
samples/: CMakeLists.txt  README.md
samples/DDRAccess/: CMakeLists.txt
samples/DDRAccess/src/: main.cpp
samples/HLS/: CMakeLists.txt
samples/HLS/src/: main.cpp
samples/HLS_CustomInterface/: CMakeLists.txt
samples/HLS_CustomInterface/src/: main.cpp  testCore.hpp
samples/PetaLinux/: CMakeLists.txt
samples/PetaLinux/AxiDMA/src/: main.cpp
samples/PetaLinux/AxiDMA_SG/: CMakeLists.txt
samples/PetaLinux/AxiDMA_SG/src/: main.cpp
samples/PetaLinux/AxiGPIO/src/: main.cpp
samples/PetaLinux/DDRAccess/: CMakeLists.txt
samples/PetaLinux/DDRAccess/src/: main.cpp
samples/PetaLinux/HLS/src/: main.cpp
samples/PetaLinux/TwoAxiDMAs/src/: main.cpp
samples/Streaming/: CMakeLists.txt
samples/Streaming/src/: main.cpp
samples/XDMA/DDRAccess/: CMakeLists.txt
samples/XDMA/DDRAccess/src/: main.cpp
samples/XDMA/HLS/src/: main.cpp
samples/XDMA/HLS_CustomInterface/src/: main.cpp  testCore.hpp
samples/XDMA/Streaming/: CMakeLists.txt
samples/XDMA/Streaming/src/: main.cpp
tests/: CMakeLists.txt  test_core.cpp  test_ip_cores.cpp
tests/support/: DummyBackend.hpp  DummyConfig.hpp
